Fix spotbugs and some style issues